<resources>
    <string name="app_name">MovieUdacity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sortByPopularity">Popularity</string>
    <string name="sortByRate">Highest rate</string>
    <string name="transition_image">transition_image</string>
    <string name="connection">Check your internet connection</string>
    <string name="retry">Retry</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title">Movies</string>
    <string name="default_overview"></string>
    <string name="default_synopsis">Overview</string>
    <string name="default_date">Release date</string>
    <string name="movies">Movies</string>
    <string name="volley_error">volleyError</string>
    <string name="default_name">Movie title</string>
    <string name="default_rate">Rate</string>
</resources>
