    <android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_cover_height"
                android:background="@color/primary_light"
                android:scaleType="fitXY"
                android:fitsSystemWindows="true"
                android:transitionName="@string/transition_image"
                />
            <TextView
                android:padding="@dimen/textview_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary_light"
                android:id="@+id/movie_name"
                android:text="@string/default_name"
                android:gravity="center"
                android:textColor="@color/secondary_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/textview_padding"
                >

            <RelativeLayout
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:gravity="center"
                android:background="@color/icons"
                android:layout_width="match_parent"
                android:layout_height="@dimen/min_layout"
                >

                <TextView
                    android:gravity="center"
                    android:id="@+id/release_date"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignBaseline="@+id/rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_date"/>

                <Button
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:clickable="false"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:id="@+id/rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@android:drawable/star_big_on"
                    android:drawableStart="@android:drawable/star_big_on"/>


            </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <LinearLayout
                    android:padding="8dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/default_synopsis"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
                    <TextView
                        android:padding="@dimen/textview_padding"
                        android:layout_width="match_parent"
                        android:id="@+id/synopsis"
                        android:layout_height="wrap_content"
                        android:text="@string/default_overview"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
